--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -20,3 +20,15 @@
 \begin{acronym}
 	\acro{spi}[SPI]{Serial Peripheral Interface}
 \end{acronym}
+
+\begin{acronym}
+	\acro{gpio}[GPIO]{General Purpose Input/Output}
+\end{acronym}
+
+\begin{acronym}
+	\acro{fifo}[FIFO]{First In First Out}
+\end{acronym}
+
+\begin{acronym}
+	\acro{hsr}[HSR]{Hochschule für Technik Rapperswil}
+\end{acronym}
