--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -80,12 +80,12 @@
 \vspace*{10pt}
 \begin{flushright}
 {\Huge
-Low Power Wakeup-Receiver}
+Low-Power Wakeup Receiver}
 
 %\Large{with Rotation, GPS and On-Board-Diagnostics Sensor Data}
 \end{flushright}
 \begin{flushright}
-{\Large Project Electrical Engineering AS2019}
+{\Large Semester Thesis 2019}
 \end{flushright}
 \HRule
 
