--- a/Doku/Bericht/2-theory/wakeup/wakeup.tex
+++ b/Doku/Bericht/2-theory/wakeup/wakeup.tex
@@ -9,12 +9,11 @@ After receiving a defined pattern over this channel, the wakeup receiver generat
 It can now establish a channel over a different wireless module, or execute another task.
 When done, the microcontroller puts itself and all other modules except the wakeup receiver in sleep mode again.
 Figure \ref{theory:wake} shows a comparison of both the conventional approach and the solution with the wakeup receiver. 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{2-theory/wakeup/graphics/wake_comp.pdf}
 	\caption{Microcontroller checks periodically for incoming data (top), additional, constantly listening  wakeup receiver (bottom)\label{theory:wake}}
 \end{figure}
-
 One can argue, that the wakeup receiver module consumes in general more power, than the microcontroller in sleep mode.
 But since the microcontroller only wakes up, when a task needs to be done, the overall energy consumption (area underneath the curves summarized) is going to be smaller if the occurring wakeup event comes infrequently or over longer periods of time.
 The response time on the other hand can be kept in the microsecond range.
