--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -10,7 +10,7 @@ The AS3933 from AMS and the RFicient from the \acf{fraun} which kindly provided 
 The AS3933 is a low frequency wakeup receiver, which uses \acs{ask} to modulate a carrier frequency between 15-150\,kHz.
 The transmitter sends a manchester encoded, programmable wakeup pattern of length 16 or 32 bit.
 If this pattern is detected on the receiver end, a wakeup interrupt is generated.
-It is also possible to disable the the pattern decoder to run the chip in a frequency detection mode, where a wakeup interrupt is generated as soon as any pattern on the specified frequency is received.
+It is also possible to disable the the pattern decoder to run the chip in a frequency detection mode, where a wakeup interrupt is generated as soon as the specified frequency is received.
 More important features on the receiver end are:
 \begin{itemize}
 	\item[-] Receiver sensitivity $80\,\mu\text{V$_{\text{RMS}}$}$
@@ -21,7 +21,7 @@ More important features on the receiver end are:
 \end{itemize}
 The low power consumption makes it possible run the receiver in listening mode below $8.3\,\mu\text{W}$\cite{as3933}.
 
-The demo kit comes with a \acs{gui}, which enables the user to set the parameters as desired and adress the registers directly.
+The demo kit comes with a \acs{gui}, which enables the user to set the parameters as desired and address the registers directly.
 The range of the receiver of about 6\,m as first measurement turns out to be very limited.
 Even with a 3db sensitivity boost on the receiver side, it is only possible to detect wakeup events from a distance of 9\,m.
 The environment (indoor, outdoor) seems to make no huge difference.
