--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -33,6 +33,7 @@ For this reason, only the ID as interrupt source is of interest.
 \end{figure}
 If an interrupt is generated, the RFicient sets a \acs{gpio}-pin to high, and transfers the received data to a \acs{fifo}-buffer.
 This data can be passed to a microcontroller over an \acs{spi}-bus.
+For the purpose of this thesis, only the \acs{gpio} high level is used as a on switch of a self-holding circuit.
 
 \subsubsection{Tests in a realistic environment}
 To test the RFicient in more detail, some indoor measurements were made.
@@ -47,15 +48,22 @@ Figure \ref{development:env1} shows the hallway where this test was executed.
 \end{figure}
 With a transmission power of 0\,dBm (1\,mW) it is possible to receive interrupt over a 50\,m distance (line of sight).
 Is the transmission power increased to 10\,dBm (10\,mW), interrupts can be sent over a distance up to 80\,m.
+In this environment, the Rficient has enough range.
+But maybe reflections off the walls, floor and ceiling have contributed to this result.
 
-
-
+Out if this reason, a second test was performed to check how the RFicient penetrates obstacles.
+As test environment served this time the \acs{hsr} builing 8, as depicted in figure \ref{development:env2}.
+An attempt was made to send wakeup signals through the ceiling.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env2.jpg}
 	\caption{Test environment 2 (\acs{hsr} building 8)\label{development:env2}}
 \end{figure}
+To avoid reflections, the RFicient was placed in such a way, that the zero point of the antenna pointed directly at the opposite walls.
+With a transmisson power of 0\,dBm, two ceilings can be penetrated.
+Is the power again increased to 10\,dBm, the signal reached through three ceilings.
 
+These measurements further confirmed, that the RFicient is suitable for the use-case of this semester thesis.
 
 \subsection{Energy Harvesting}
 The screen should be self-sustaining, thus some sort of energy-harvesting unit is needed.
