--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -1,14 +1,22 @@
--t\begin{figure}[ht]
+\begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/1.png}
 	\caption{not up to date sequence\label{software:sequence}}
 \end{figure}
 
-\subsection{Receiver}
-
 The software of the ULPWUR is separated in three different parts. 
 
 \includegraphics[scale=0.3]{4-development/software/graphics/font12.pdf}
+
+\subsection{Receiver}
+
+\subsubsection{Python-script}
+A short python script enables the user to send the data over an USB-port to the nRF52840.
+\lstset{language=Python, showstringspaces=false}
+%\lstinputlisting{4-development/software/code/WriteSection.py}
+
+
+\subsubsection{nRF52840}
 
 
 \subsection{Transceiver}
