--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -1,4 +1,5 @@
 \chapter*{Abstract}
+aktelle iekopiere!!
 
 \section*{Introduction}
 In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to room entrances. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Screens on the other hand need either to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor light, and is updated via a wireless interface. The screen should therefore be completely wireless.
