add product brief

--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -4,6 +4,11 @@
 	\caption{Receiver schematics\label{hardware:block}}
 \end{figure}
 
+\subsection{nRF52480}
+A nRF52580 from nordic semiconductor serves as wireless module.
+
+
+
 \subsection{RFicient}
 
 \subsubsection{Transmitter}
