--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -46,7 +46,7 @@
 }
 
 @manual{nrf,
-	organisation = {Nordic},
+	organisation = {Nordic Semiconductor},
 	title =  {{nRF52840 Objective Product Specification v0.5}},
 	year          =  2016,
 	month         =  12,
@@ -75,6 +75,12 @@
 	keywords = {manual}
 }
 
+@manual{nrfpb,
+	organisation = {Nordic Semiconductor},
+	title =  {{nRF52480 Product Brief}},
+	year          =  2017,
+	keywords = {manual}
+}
 
 
 
