--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -32,3 +32,23 @@
 \begin{acronym}
 	\acro{hsr}[HSR]{Hochschule für Technik Rapperswil}
 \end{acronym}
+
+\begin{acronym}
+	\acro{ble}[BLE]{Bluetooth Low Energy}
+\end{acronym}
+
+\begin{acronym}
+	\acro{iot}[IoT]{Internet of Things}
+\end{acronym}
+
+\begin{acronym}
+	\acro{uart}[UART]{Universal Asynchronous Receiver Transmitter}
+\end{acronym}
+
+\begin{acronym}
+	\acro{usb}[USB]{Universal Serial Bus}
+\end{acronym}
+
+\begin{acronym}
+	\acro{ttl}[TTL]{Transistor-Transistor Logic}
+\end{acronym}
