--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -52,3 +52,7 @@
 \begin{acronym}
 	\acro{ttl}[TTL]{Transistor-Transistor Logic}
 \end{acronym}
+
+\begin{acronym}
+	\acro{fram}[FRAM]{Ferroelectric Random Access Memory}
+\end{acronym}
