--- a/Doku/Bericht/2-theory/wakeup/graphics/wake_comp.tex
+++ b/Doku/Bericht/2-theory/wakeup/graphics/wake_comp.tex
@@ -37,7 +37,7 @@
 	\node[above] at (-0.3,4) {Power};
 	\node[below] at (9.5,0) {Time};
 	\draw[thick, pltred] (7.5,3.9)--++(0.1,0);
-	\node[right] at (7.55,3.9) {\scriptsize microcontroller};
+	\node[right] at (7.55,3.9) {\scriptsize Microcontroller};
 	
 	%beschriftung
 	\draw [arrow, bend right] (1.5,3.5) to (0.58,2.9);
@@ -65,9 +65,9 @@
 	\node[above] at (-0.3,4-\sh) {Power};
 	\node[below] at (9.5,0-\sh) {Time};
 	\draw[thick, pltred] (7.5,3.9-\sh)--++(0.1,0);
-	\node[right] at (7.55,3.9-\sh) {\scriptsize microcontroller};
+	\node[right] at (7.55,3.9-\sh) {\scriptsize Microcontroller};
 	\draw[thick, pltblue] (7.5,3.55-\sh)--++(0.1,0);
-	\node[right] at (7.55,3.55-\sh) {\scriptsize wakeup receiver};
+	\node[right] at (7.55,3.55-\sh) {\scriptsize Wakeup Receiver};
 	
 	%beschriftung	
 	\draw [arrow, bend right] (5,3.5-\sh) to (4.1,2.9-\sh);
