--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -1,6 +1,4 @@
 \chapter{Evaluation}
-This chapter lists the pros and cons of available Technologies.
-On this basis was evaluated, which hardware is suitable.
 
 \section{Wakeup Receiver}
 In this semester thesis, two different implementations of the wakeup receiver technology were compared.
@@ -45,3 +43,13 @@ The power consumption therefore is in listening mode (data rate = 1 kb/s) $4.5\,
 Just as the AS3933, the RFicient demo kit comes with a \acs{gui}, which enables the user to set the important parameters and access the register \cite{rficient}.
 First measurements showed that the range of the RFicient is far higher than the range of the AS3933.
 It is therefore used in the prototype.
+
+\section{Microcontroller}
+To handle incoming data and write it to the display driver, some kind of microcontroller is needed.
+A derivate of the MSP430 and one of the STM32 were looked at more closely.
+
+\subsection{MSP430}
+
+
+
+\subsection{STM32}
