--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -71,7 +71,7 @@ These measurements further confirmed, that the RFicient is suitable for the use-
 
 \subsubsection{nRF52480}
 A nRF52580 from nordic semiconductor serves as the wireless module.
-It is used because it supports multiple protocols like Bluetooth 5 which includes \acf{ble}, Thread and Zigbee\cite{nrfpb}.
+It is used because it supports multiple protocols like Thread, Zigbee and more important Bluetooth 5 which includes \acf{ble}\cite{nrfpb}.
 Since \acs{ble} allows mesh networking and is applied in many existing devices, such as smartphones, the connection to transmit data is established over this protocol.
 This way, the developed prototype could later be extended to a mesh network.
 
