--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -24,9 +24,23 @@ The software of the ULPWUR is separated in three different parts.
 }
 \lstset{style=mystyle}
 
-A short python script enables the user to send the data over an USB-port to the nRF52840.
+A short python script enables the user to send the data to the display.
+This script is looked at here little by little.
 
-%\lstinputlisting{4-development/software/code/WriteSection.py}
+%\begin{enumerate}
+	%\item Include of the needed packages open a port to the nRF52480 development kit.
+	\begin{lstlisting}
+		import serial
+		import time
+		
+		baudrate = 115200
+		com_port = 'COM14'
+		
+		device = serial.Serial(com_port, baudrate, writeTimeout=0)
+	\end{lstlisting}
+	 
+%\end{enumerate}
+
 
 \subsubsection{nRF52840}
 The software on both sides of the bluetooth channel is very similar, thus it is explained in this section.
