--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -49,7 +49,12 @@ To handle incoming data and write it to the display driver, some kind of microco
 A derivate of the MSP430 and one of the STM32 were looked at more closely.
 
 \subsection{MSP430}
-
+The MSP430FR6989 was up for selection because it is specifically developed for ultra-low-power applications.
+Of particular interest is mainly the non volatile 128\,KB \acf{fram}.
+Key-features are:
+\begin{itemize}
+	\item Approximately  $100\,\mu\text{A}/\text{MHz}$ 
+\end{itemize}
 
 
 \subsection{STM32}
