--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -10,6 +10,11 @@
 	\acro{ble}[BLE]{Bluetooth Low Energy}
 \end{acronym}
 
+%C
+\begin{acronym}
+	\acro{cpu}[CPU]{Central Processing Unit}
+\end{acronym}
+
 %F
 \begin{acronym}
 	\acro{fifo}[FIFO]{First In First Out}
@@ -50,6 +55,10 @@
 %S
 \begin{acronym}
 	\acro{spi}[SPI]{Serial Peripheral Interface}
+\end{acronym}
+
+\begin{acronym}
+	\acro{sram}[SRAM]{Static Random Access Memory}
 \end{acronym}
 
 %T
