--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -8,13 +8,13 @@ This setup is shown in figure \ref{theory:capsules}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/capsules.pdf}
-	\caption{filler pic\label{theory:capsules}}
+	\caption{Capsules between to electrodes (taken from \cite{amundson} with adjustments)\label{theory:capsules}}
 \end{figure}
 
 Each capsule in the film itself contains a transparent fluid and particles of two opposite charges.
 One type of particle scatters the light while the other one absorbs it.
 The particles now begin to move in opposite directions thought the fluid when exposed two a electrical field. 
-The pixel (defined by the electrode size) appears white if the scattering particles ar near the frontplane and black if otherwise.
+The pixel (defined by the electrode size) appears white if the scattering particles are near the frontplane and black if otherwise.
 If no voltage is applied to the electrodes, the particles maintain their last position.
 This makes it possible to switch of the power supply when no image update is needed which is the reason why the power consumption is strongly reduced compared to other types of display \cite{amundson}.
 
