--- a/Doku/Bericht/4-development/hardware/graphics/top/top_schematics.tex
+++ b/Doku/Bericht/4-development/hardware/graphics/top/top_schematics.tex
@@ -68,13 +68,13 @@
 	\draw[thick] (0.7,-6) --++(0,-\len) node[rotate=90, anchor=east]{\fs EPD};
 	\draw[thick] (0.7,-4)--(0.7,-6);
 	
-	\draw[thick] (9,-7.5) --++(\len,0) node[right]{\fs SPI};
-	\draw[thick] (9,-8.5) --++(\len,0) node[right]{\fs I80};
+	%\draw[thick] (9,-7.5) --++(\len,0) node[right]{\fs SPI};
+	\draw[thick] (9,-8.5) --++(\len,0) node[right]{\fs SPI};
 	\draw[thick] (9,-9.5) --++(\len,0) node[right]{\fs EPD\_Power};	
-	\draw[thick] (6,-7.5) --++(-\len,0) node[left]{\fs SPI};
-	\draw[thick] (6,-8.5) --++(-\len,0) node[left]{\fs I80};
+	%\draw[thick] (6,-7.5) --++(-\len,0) node[left]{\fs SPI};
+	\draw[thick] (6,-8.5) --++(-\len,0) node[left]{\fs SPI};
 	\draw[thick] (6,-9.5) --++(-\len,0) node[left]{\fs EPD\_Power};
-	\draw[thick] (9,-7.5)--(6,-7.5);
+	%\draw[thick] (9,-7.5)--(6,-7.5);
 	\draw[thick] (9,-8.5)--(6,-8.5);
 	\draw[thick] (9,-9.5)--(6,-9.5);
 	
