--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -82,6 +82,13 @@
 	keywords = {manual}
 }
 
+@manual{msp430,
+	organisation = {Texas Instruments},
+	title =  {{MSP430FR698x(1), MSP430FR598x(1) Mixed-Signal Microcontrollers}},
+	year          =  2018,
+	month = 08,
+	keywords = {manual}
+}
 
 
 
