--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -1,15 +1,10 @@
 \chapter*{Abstract}
-aktelle iekopiere!!
 
 \section*{Introduction}
-In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to room entrances. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Screens on the other hand need either to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor light, and is updated via a wireless interface. The screen should therefore be completely wireless.
+In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to a room entrance. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Hence, screens need to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor lightning, and is updated via a wireless interface.
 
 \section*{Approach}
-Energy is harvested with solar cells and is stored in a super-capacitor.
-Because this harvesting unit cannot provide unlimited energy, the whole system with display, microcontroller and wireless interface should consume as little energy as possible.
-To achieve this, an e-paper display is used, which only needs energy to update the screen, but not to maintain the displayed image.
-A constantly listening wakeup receiver can generate an wakeup interrupt and makes a periodic wake up of the microcontroller to check for incoming events redundant while maintaining a reasonable response time.
-A lot of energy can be saved this way, since updating the screen usually doesn't happen more than a few times a week.
+To power the system, solar cells are used to harvest energy, which is stored in a super-capacitor to ensure small power leakage. Because this kind of harvesting unit cannot provide vast amounts of energy over a long period of time, the whole system can only fully run in short bursts. To save energy, an e-paper display is used, which only needs energy to update the screen, but not for maintaining the displayed image. Furthermore a constantly listening wakeup receiver is used. When receiving a specific wakeup sequence, it will generate an interrupt to enable the power supply of the remaining system. The remaining part then receives data via Bluetooth, displays the data and in the end cuts its own power supply, to enter a new cycle of low-power listening mode. 
 
 \section*{Conclusion}
-Energy harvesting provides enough energy if updating of the schedule does not occur to frequently. This semester thesis shows, that a wakeup receiver is suitable for this kind of problem. By implementing a self-holding circuit, it is even possible to switch off the whole system (except wakeup receiver) when unused. The wakeup receiver consumes in this listening mode $4.5\,\mu\text{W}$ at most.
+Energy harvesting provides enough energy, if updating the schedule does not occur too frequently. This semester thesis shows, that a wakeup receiver is suitable for this kind of problem. With the implementation of a self-holding circuit, it is even possible to switch off the whole system (except for the wakeup receiver) when unused. The wakeup receiver consumes a maximum of $4.5\,\mu \text{W}$ during listening mode while the system harvests around $485,52\,\mu\text{W}$.  
