--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -1,3 +1,6 @@
+Figure \ref{hardware:block} shows a schematics of the receiver.
+Every component is described in more detail in this section.
+
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/top/top_schematics.pdf}
