--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -19,11 +19,11 @@ After the receiver is woken up with the RFicient, the peripheral starts advertis
 Advertising basically means sending data packets periodically with information for the central device.
 The central is scanning for the this advertisement and can based on this information decide, if it wants to connect.
 Is the connection established, it is now possible to exchange data through this channel.
-This process is illustrated in figure \ref{software:ble}.
+This process is illustrated in Figure \ref{software:ble}.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/ble.pdf}
-	\caption{\acs{ble}-communication with the nRF52480\label{software:ble}}
+	\caption{\acs{ble}-communication with the nRF52480.\label{software:ble}}
 \end{figure}
 
 The central serves after connection as the client.
