--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -3,12 +3,12 @@ But since the developed prototype uses a microencapsulated electrophoretic displ
 
 A film, consisting of microscopic capsules, is coated onto a backplane, which basically is a matrix of electrodes.
 On top of that comes a common electrode, called the frontplane.
-This setup is shown in figure \ref{theory:capsules}.
+This setup is shown in Figure \ref{theory:capsules}.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/capsules.pdf}
-	\caption{Capsules between to electrodes (taken from \cite{amundson} with adjustments)\label{theory:capsules}}
+	\caption{Capsules between to electrodes (taken from \cite{amundson} with adjustments).\label{theory:capsules}}
 \end{figure}
 
 Each capsule in the film itself contains a transparent fluid and particles of two opposite charges.
@@ -21,7 +21,7 @@ This makes it possible to switch of the power supply when no image update is nee
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/epaper_mikroskop.pdf}
-	\caption{E-paper display under microscope with 250x magnification\label{theory:micro}}
+	\caption{E-paper display under microscope with 250x magnification.\label{theory:micro}}
 \end{figure}
 
 Figure \ref{theory:micro} shows a e-paper display with 250x magnification.
