--- a/Doku/Bericht/2-theory/wakeup/wakeup.tex
+++ b/Doku/Bericht/2-theory/wakeup/wakeup.tex
@@ -12,7 +12,7 @@ Figure \ref{theory:wake} shows a comparison of both the conventional approach an
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{2-theory/wakeup/graphics/wake_comp.pdf}
-	\caption{Microcontroller checks periodically for incoming data (top), additional, constantly listening  wakeup receiver (bottom)\label{theory:wake}}
+	\caption{Microcontroller checks periodically for incoming data (top), additional, constantly listening  wakeup receiver (bottom).\label{theory:wake}}
 \end{figure}
 One can argue, that the wakeup receiver module consumes in general more power, than the microcontroller in sleep mode.
 But since the microcontroller only wakes up, when a task needs to be done, the overall energy consumption (area underneath the curves summarized) is going to be smaller if the occurring wakeup event comes infrequently or over longer periods of time.
