--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -4,7 +4,7 @@ Every component is described in more detail in this section.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/top/top_schematics.pdf}
-	\caption{Receiver schematics\label{hardware:block}}
+	\caption{Receiver schematics.\label{hardware:block}}
 \end{figure}
 
 \subsection{Microcontroller}
@@ -18,11 +18,11 @@ The Rficient demo kit comes, as previously stated with a \acs{gui}.
 Is the transmitter module connected, simple steps make it possible to set the preamble and payload data rate. 
 The payload itself can partly serve as an ID and as additional transmitted data.
 The power of the transmission can also be set between -30\,dBm and 10\,dBm.
-The transmitter-\acs{gui} is shown in figure \ref{development:tx}.
+The transmitter-\acs{gui} is shown in Figure \ref{development:tx}.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/TXgui.png}
-	\caption{Transmitter GUI\label{development:tx}}
+	\caption{Transmitter GUI.\label{development:tx}}
 \end{figure}
 To test, if any data is received, it is helpful to activate the infinite loop (top right in figure \ref{development:tx}).
 The defined data is in this case sent repeatedly with an adjustable period.
@@ -30,13 +30,13 @@ The defined data is in this case sent repeatedly with an adjustable period.
 \paragraph{Receiver}
 To receive the data, the setting of the receiver module need to be matched to the transmitter.
 The provided receiver-\acs{gui} makes this step very simple.
-As visible in figure \ref{development:rx}, one can enable the four possible interrupt sources: CodeA/B, ID, FIFO length and FIFO overflow.
+As visible in Figure \ref{development:rx}, one can enable the four possible interrupt sources: CodeA/B, ID, FIFO length and FIFO overflow.
 In the finished product, it should be possible to wake up the receivers individually.
 For this reason, only the ID as interrupt source is of interest.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/RXgui.png}
-	\caption{Receiver GUI\label{development:rx}}
+	\caption{Receiver GUI.\label{development:rx}}
 \end{figure}
 If an interrupt is generated, the RFicient sets a \acs{gpio}-pin to high, and transfers the received data to a \acs{fifo}-buffer.
 This data can be passed to a microcontroller over an \acs{spi}-bus.
@@ -51,7 +51,7 @@ Figure \ref{development:env1} shows the hallway where this test was executed.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env1.jpg}
-	\caption{Test environment 1 (\acs{hsr} building 1)\label{development:env1}}
+	\caption{Test environment 1 (\acs{hsr} building 1).\label{development:env1}}
 \end{figure}
 With a transmission power of 0\,dBm (1\,mW) it is possible to receive interrupt over a 50\,m distance (line of sight).
 Is the transmission power increased to 10\,dBm (10\,mW), interrupts can be sent over a distance up to 80\,m.
@@ -59,12 +59,12 @@ In this environment, the Rficient has enough range.
 But maybe reflections off the walls, floor and ceiling have contributed to this result.
 
 Out if this reason, a second test was performed to check how the RFicient penetrates obstacles.
-As test environment served this time the \acs{hsr} builing 8, as depicted in figure \ref{development:env2}.
+As test environment served this time the \acs{hsr} builing 8, as depicted in Figure \ref{development:env2}.
 An attempt was made to send wakeup signals through the ceiling.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env2.jpg}
-	\caption{Test environment 2 (\acs{hsr} building 8)\label{development:env2}}
+	\caption{Test environment 2 (\acs{hsr} building 8).\label{development:env2}}
 \end{figure}
 To avoid reflections, the RFicient was placed in such a way, that the zero point of the antenna pointed directly at the opposite walls.
 With a transmisson power of 0\,dBm, two ceilings can be penetrated.
@@ -140,7 +140,7 @@ Figure \ref{development:test} shows the layout of the test setup.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/testaufbau.pdf}
-	\caption{Schematics of the test setup\label{development:test}}
+	\caption{Schematics of the test setup.\label{development:test}}
 \end{figure}
 
 To carry out these measurements, it is first necessary to adjust the minimal and maximal voltage of the ADP5090.
@@ -166,7 +166,7 @@ The measurements where taken over a couple hours and are plotted in Figure \ref{
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/laden.pdf}
-	\caption{Charging behaviour\label{development:charge}}
+	\caption{Charging behaviour.\label{development:charge}}
 \end{figure}
 
 No load was connected to the output ($Z_\text{LOAD} \to \infty$), which is the reason $V_{\text{SYS}}$ is overlapped by $V_{\text{BAT}}$.
@@ -188,7 +188,7 @@ Figure \ref{development:discharge} shows the result.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/entladen.pdf}
-	\caption{Discharging behaviour\label{development:discharge}}
+	\caption{Discharging behaviour.\label{development:discharge}}
 \end{figure}
 
 As soon as the load is connected (after 25\,), $V_{\text{SYS}}$ and $V_{\text{BAT}}$ first drop by almost $1\,\text{V}$ and after that steadily decrease.
