--- a/Doku/Bericht/5-results/energy/energy.tex
+++ b/Doku/Bericht/5-results/energy/energy.tex
@@ -1,21 +1,33 @@
 To look at the energy consumption in detail, a power analyser was used as the power supply.
 To carry out measurements, the ADP5090 with the solar cells and super cap was disconnected and the remaining components connected to the power analyser with a fixed voltage of 3.3\,V.
-This way, the voltage and current could be over one write-cycle could be tracked.
+This way, the voltage and current over one write-cycle could be tracked.
 The result is plotted in Figure \ref{results:ui}.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{5-results/energy/logger/ui.pdf}
 	\caption{Current and Voltage during one write-cycle.\label{results:ui}}
 \end{figure}
-One write-cycle takes approximately 5.8 seconds.
+One write-cycle takes about 5.8 seconds.
 In this interval, the STM32, nRF52480 and display driver are active.
-Clearly visible is the inrush current peak.
+Clearly visible is the current peak which occurs when the system is woken up.
+Short after the 5 seconds mark, initializing and data receiving is finished and the display is refreshed.
+The current peaks there are due to the charge pumps on the display driver.
 
-
-
-
+With voltage and current given, the power over time can be calculated.
+This curve is plotted in Figure \ref{results:p}.
+The power follows obviously the same course like the current since the voltage is constant.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{5-results/energy/logger/p.pdf}
 	\caption{Power consumption during one write cycle.\label{results:p}}
 \end{figure}
+The energy needed for one write-cycle is given with the integral of the power over time:
+\begin{align}
+	E = \int_{0}^{8\,\text{s}}P(t)\text{dt}\approx 2.7504\,\text{J}.
+\end{align}
+Like stated in \eqref{development:cell_power} the solar cells provide $485.52\,\mu \text{W}$ at 200\,lux.
+Considering the Rficient which consumes $4.5\mu \text{W}$, it is possible to estimate the time needed, to harvest the power for one write cycle:
+\begin{align}
+	t_{\text{E}}=\frac{2.7504\,\text{J}}{485.52\,\mu \text{W}-4.5\mu \text{W}}=5717.85\,\text{s}\approx 1\,\text{h } 35\,\text{min}.
+\end{align}
+Not taken into account is the leakage of the super capacitor and losses in the ADP5090.
