--- a/Doku/Bericht/5-results/energy/energy.tex
+++ b/Doku/Bericht/5-results/energy/energy.tex
@@ -1,4 +1,4 @@
-To look at the energy consumption in detail, a power analyser was used as the power supply.
+To look at the energy consumption in detail, the N6705B power analyzer from keysight was used as the power supply.
 To carry out measurements, the ADP5090 with the solar cells and super cap was disconnected and the remaining components connected to the power analyser with a fixed voltage of 3.3\,V.
 This way, the voltage and current over one write-cycle could be tracked.
 The result is plotted in Figure \ref{results:ui}.
