--- a/Doku/Bericht/6-summary/6-summary.tex
+++ b/Doku/Bericht/6-summary/6-summary.tex
@@ -1,1 +1,7 @@
 \chapter{Summary}
+
+\section{Conclusion}
+\input{6-summary/conclusion.tex}
+
+\section{Future work}
+\input{6-summary/furure_work.tex}
