--- a/Doku/Bericht/2-theory/2-theory.tex
+++ b/Doku/Bericht/2-theory/2-theory.tex
@@ -6,4 +6,7 @@
 \section{Wakeup Receiver}
 \input{2-theory/wakeup/wakeup.tex}
 
-\section{software grafik zeichen}
+\section{Drawing graphics on a graphics display}
+\label{chapter:DrawGraph}
+
+\input{2-theory/drawing-graphics/graphic.tex}
