--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -11,7 +11,18 @@
 %%Online-------------------------------------------------------------------------------------------------------
 
 %%Abbildungen-------------------------------------------------------------------------------------------------------
+%%Techreport-----------------------------------------------------------------------------------------------------
+@techreport{ISO/IEC9899,
+	type = {Standard},
+	key = {ISO/IEC 9899:2011 (E)},
+	month = mar,
+	year = {2011},
+	title = {Information technology — Programming languages — C},
+	volume = {2011},
+	address = {Geneva, CH},
+	institution = {International Organization for Standardization}
 
+}
 %%Datenblatt-------------------------------------------------------------------------------------------------------
 @manual{amorton,
 	organisation = {Panasonic Industry},
