--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -12,7 +12,7 @@
 
 %%Abbildungen-------------------------------------------------------------------------------------------------------
 %%Techreport-----------------------------------------------------------------------------------------------------
-@techreport{ISO/IEC9899,
+@tech{ISO/IEC9899,
 	type = {Standard},
 	key = {ISO/IEC 9899:2011 (E)},
 	month = mar,
