--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -9,6 +9,7 @@
 \usepackage[T1]{fontenc}
 %\usepackage{german}
 \usepackage{times}
+\usepackage{csquotes}
 \usepackage{geometry}
 \geometry{papersize={210mm,297mm},total={160mm,240mm},top=31mm,bindingoffset=15mm}
 \usepackage{amsmath}
